--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -106,7 +106,7 @@ Illinois Society of Professional Engineers</p>
 					<h2 class="text-blue">Contact Information</h2>
 
 			<p> 			<%= image_tag("email-icon.png", class: "icon") %>
-<b>email</b>: <a href="">bbradshaw@bkbeng.com</a></p></a>
+<b>email</b>: <a href="mailto:bbradshaw@bkbeng.com">bbradshaw@bkbeng.com</a></p></a>
 			<p>	<%= image_tag("office-icon.png", class: "icon") %><b>office</b>: 217-531-2971</p>
 			<p>	<%= image_tag("mobile-icon.png", class: "icon") %><b>cell</b>: 217-840-3546</p>
 			<p>	<%= image_tag("fax-icon.png", class: "icon") %><b>fax</b>: 217-531-2211</p>
