--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -12,12 +12,12 @@
 		<%= image_tag("plans.jpg", class: "plans-background") %>
 
 	<div class="about flex-container aifs border-top padding-tbo">
-		<div class="quarter"><p><b>about</b></p></div>
+		<div class="quarter"><p><b class="text-blue">about</b></p></div>
 		<div class="three-fourths">
 			<div class="flex-container aifs padding-bo">
 				<div class="quarter"><p><b>company profile</b></p></div>
 				<div class="three-fourths">
-					<p>Since 2001, BKB Engineering Inc. has provided professional services for public works, agricultural and land development projects including residential, commercial, retail, office, warehouse, mixed-use and industrial. Our firm routinely provides services for million dollar plus projects.</p>
+					<p>Since 2001, BKB Engineering Inc. has provided professional services for public works, agricultural and land development projects including residential, commercial, retail, office, warehouse, mixed-use and industrial.</p>
 				</div>
 			</div>	
 			<div class="flex-container aifs border-top padding-to">
@@ -29,14 +29,14 @@
 		</div>
 	</div>
 	<div class="services flex-container aifs border-top padding-tbo">
-		<div class="quarter"><p><b>services</b></p></div>
+		<div class="quarter"><p><b class="text-blue">services</b></p></div>
 		<div class="three-fourths">
 			<div class="flex-container aifs">
 				<div class="quarter"><p><b></b></p></div>
 				<div class="three-fourths flex-container">
 					<div class="half">
 						<p>Site Feasibility Studies<br>
-						   ALTA and ACSM Surveying<br>
+						   ALTA / NSPS Land Title Surveys<br>
 						   Topographic and Boundary Surveying<br>
 						   Utility Design<br>
 						   Easement Preparation<br> 
@@ -103,7 +103,7 @@ Illinois Society of Professional Engineers</p>
 <section class="contact-us flex-container padding-tbo">
 	<div class="flex-container aic three-fourths">
 		<div class="">
-					<h2 class="text-blue">Contact Information</h2>
+					<h2 class="text-blue">Contact information</h2>
 
 			<p> 			<%= image_tag("email-icon.png", class: "icon") %>
 <b>email</b>: <a href="mailto:bbradshaw@bkbeng.com">bbradshaw@bkbeng.com</a></p></a>
@@ -118,31 +118,57 @@ Illinois Society of Professional Engineers</p>
 </section>
 </main>
 <style>
+	@media only screen and (max-width: 588px) {
+    main { 
+      padding: 1rem; 
+      max-width: 1000px; 
+      margin: 0 auto; 
+    }
+    .hero h1, h2 { font-size: 18pt }
+    .padding-to { padding-top: 10px; }
+    .padding-tbo {padding: 10px 0}
+    .padding-bo {padding-bottom: 10px;}
+    .logo { width: 200px; margin: 0 auto; display: block; }
+      .icon { width: 25px; vertical-align: middle; margin-right: 5px; }
+
+	}
+  @media only screen and (min-width: 589px) {
+    .flex-container { display: flex; }
+    .quarter { width: 25%;  }
+    .three-fourths { width: 75%;  }
+    .one-third { width: 33%; }
+    .two-thirds { width: 66%; }
+    main { 
+      padding: 4rem; 
+      max-width: 1000px; 
+      margin: 0 auto; 
+    }
+    .hero {  padding: 50px 0; }
+    .hero h1, h2 { font-size: 24pt }
+    .aifs { align-items: flex-start; }
+    .aic { align-items: center; }
+    .half { width: 50%; }
+    .padding-to { padding-top: 20px; }
+    .padding-tbo {padding: 20px 0}
+    .padding-bo {padding-bottom: 20px;}
+    .hero h1 { font-size: 24pt }
+    .logo { width: 300px }
+      .icon { width: 30px; vertical-align: middle; margin-right: 10px; }
+
+  }
 	iframe { border: none; }
-	.contact-us { border-top: 1px solid black; border-bottom: 1px solid black; }
-	.flex-container { display: flex; }
-	.aifs { align-items: flex-start; }
-	.aic { align-items: center; }
-	.quarter { width: 25%;  }
-	.three-fourths { width: 75%;  }
-	.one-third { width: 33%; }
+	.contact-us { 
+    border-top: 1px solid black; 
+    border-bottom: 1px solid black; 
+  }
 	.fw { width: 100%; }
-	.two-thirds { width: 66%; }
-	main { padding: 4rem; max-width: 1000px; margin: 0 auto; }
-	.hero {  padding: 50px 0; }
 	.border-top { border-top: 1px solid black; }
-	.half { width: 50%; }
 	.plans-background {
     width: 100%;
     position: absolute;
     z-index: -1;
     opacity: .08;
     left: 0;
-}
-.icon { width: 30px; vertical-align: middle; margin-right: 10px; }
-.padding-to { padding-top: 20px; }
-.padding-tbo {padding: 20px 0}
-.padding-bo {padding-bottom: 20px;}
-.hero h1 { font-size: 24pt }
-.logo { width: 300px }
+  }
+
 </style>
